# jute-disease-dataset

./: .gitignore  README.md  main.py  plot_results.py  pyproject.toml
runs/efficientnet_epochs25_lr0.0001/: events.out.tfevents.1751833045.MacBook-Pro-uzivatela-Martin.local.67986.4
runs/efficientnet_epochs25_lr0.0001/1751834645.307474/: events.out.tfevents.1751834645.MacBook-Pro-uzivatela-Martin.local.67986.5
runs/efficientnet_epochs25_lr0.001/: events.out.tfevents.1751831442.MacBook-Pro-uzivatela-Martin.local.67986.2
runs/efficientnet_epochs25_lr0.001/1751833045.9236789/: events.out.tfevents.1751833045.MacBook-Pro-uzivatela-Martin.local.67986.3
runs/efficientnet_epochs25_lr0.01/: events.out.tfevents.1751829815.MacBook-Pro-uzivatela-Martin.local.67986.0
runs/efficientnet_epochs25_lr0.01/1751831442.0855732/: events.out.tfevents.1751831442.MacBook-Pro-uzivatela-Martin.local.67986.1
runs/mobilenet_epochs25_lr0.0001/: events.out.tfevents.1751910415.MacBook-Pro-uzivatela-Martin.local.1827.8
runs/mobilenet_epochs25_lr0.001/: events.out.tfevents.1751907172.MacBook-Pro-uzivatela-Martin.local.1827.6
runs/mobilenet_epochs25_lr0.01/: events.out.tfevents.1751905757.MacBook-Pro-uzivatela-Martin.local.1827.4
runs/resnet_epochs25_lr0.0001/: events.out.tfevents.1751904391.MacBook-Pro-uzivatela-Martin.local.1827.2
runs/resnet_epochs25_lr0.001/: events.out.tfevents.1751903014.MacBook-Pro-uzivatela-Martin.local.1827.0
runs/resnet_epochs25_lr0.01/: events.out.tfevents.1751919043.MacBook-Pro-uzivatela-Martin.local.47669.0
(+6 files in other folders)
